# ocfl-index-py

./: .gitignore  Makefile  README.md  buf.gen.yaml  pyproject.toml
examples/: download_file.py  get_object.py  get_status.py  list_files.py  list_objects.py
ocfl-index/ocfl/v1/: index_pb2.py
ocflindex/: ocflindex.py
ocflindex/ocfl/v1/: index_pb2.py  index_pb2_grpc.py
src/ocflindex/: __init__.py  models.py  ocflindex.py
