[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ocflindex"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "pydantic ~= 1.10.7",
    "requests ~= 2.28.2",
    "grpcio ~= 1.53.0",
    "protobuf ~= 4.22.1",
]

[tool.setuptools.packages.find]
where = ["ocflindex"]